tests/badvar1.err
4: error: cannot find symbol 'c'
	int b = c;
	        ^
