tests/badvar1.juice
// attempt to use a variable before it is declared

int a = 5;
int b = c;